<resources>
    <string name="app_name">BitCard</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="LoginActivityLabel">Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password_verification">Password Verification</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="create_account">Create Account</string>
    <string name="CreateAccountActivityLabel">Create Account</string>
    <string name="welcome">Welcome</string>
    <string name="select_date_dialog_header">Select date</string>
    <string name="accept_terms_and_conditions">I accept the terms of use</string>
    <string name="create">Create</string>
    <string name="address">Address</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="contact_info">Contact Info</string>
    <string name="open_google_maps">Open Google Maps</string>
    <string name="ShopsListFragmentTitle">LIST</string>
    <string name="ShopsMapsFragmentTitle">MAP</string>
    <string name="shops">Shops</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="MainScreenActivityTitle">Main Screen</string>
    <string name="profile_picture">Profile picture</string>
    <string name="settings">Settings</string>
    <string name="shops_list">Shops List</string>
    <string name="purchase_history">Purchase History</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="ProfileInfoActivity">Profile Info</string>
    <string name="points">points</string>
    <string name="next_reward">next reward</string>
    <string name="coupons">coupons</string>
    <string name="ShopDetailActivityLabel">Store Information</string>
    <string name="CreateCardActivityLabel">Create Card</string>
    <string name="ShopsActivityLabel">Shops</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="register">Register</string>
    <string name="email_empty">Email cannot be empty!</string>
    <string name="password_empty">Password cannot be empty!</string>
    <string name="password_must_have_6_plus_digits">Password needs to have at least 6 characters!</string>
    <string name="space_between" translatable="false">%1$s %2$s</string>
    <string name="username_cannot_be_empty">Username cannot be empty!</string>
    <string name="password_cannot_be_empty">Password cannot be empty!</string>
    <string name="name_cannot_be_empty">Name cannot be empty!</string>
    <string name="surname_cannot_be_empty">Surname cannot be empty!</string>
    <string name="email_cannot_be_empty">Email cannot be empty!</string>
    <string name="date_of_birth_cannot_be_empty">Date of birth cannot be empty!</string>
    <string name="address_cannot_be_empty">Address cannot be empty!</string>
    <string name="wrong_password_confirmation">Wrong confirmation password!</string>
    <string name="change_password">Change password</string>
    <string name="proceed">Proceed</string>
    <string name="new_password">New Password</string>
    <string name="theme">Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">System\'s default</string>
    <string name="remember_me">Remember me</string>
    <string name="logout_error">Unable to perform logout!</string>
    <string name="logout_success">Logout successfully!</string>
    <string name="purchase_info">Purchase Info</string>
    <string name="value">Value</string>
    <string name="products_image">Product\'s image</string>
    <string name="distance_unit_metric">km.</string>
    <string name="phone_number">Phone Number</string>
    <string name="dash">-</string>
    <string name="title_home">Home</string>
    <string name="purchases_fragment_title">Purchases</string>
    <string name="card_qr_code">Digital card\'s QR code</string>
    <string name="added_to_favorite_shops">Added to your favorite shops!</string>
    <string name="fail">Fail!</string>
    <string name="removed_from_favorite_shops">Removed from your favorite shops!</string>
    <string name="d_dots" translatable="false">:</string>
    <string name="monday_string">Monday</string>
    <string name="tuesday_string">Tuesday</string>
    <string name="thursday_string">Thursday</string>
    <string name="wednesday_string">Wednesday</string>
    <string name="friday_string">Friday</string>
    <string name="saturday_string">Saturday</string>
    <string name="sunday_string">Sunday</string>
    <string name="and">and</string>
    <string name="contact_phone">Contact phone</string>
    <string name="cancel">Cancel</string>
    <string name="sync_successfull">Synchronization successful! Your data is up to date!</string>
    <string name="sync_error">" Synchronization Error! Please try again later."</string>
</resources>