<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>


    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_gravity="center"
                android:padding="5dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/primaryColor"
                app:strokeWidth="1dp"
                android:id="@+id/profile_picture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/gray"
                android:onClick="onProfilePictureClick"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_person_focused"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <EditText
                android:id="@+id/name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor" />



            <!--same background for the password field
                as the custom_edit_text_cut-->
            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/email"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/username"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor" />

            <!--same background for the password field
                as the custom_edit_text_cut-->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor"
                android:autofillHints="" />

            <EditText
                android:id="@+id/verify_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/password_verification"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_selector"
                android:hint="@string/address"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:scrollHorizontally="true"
                android:textColor="@color/primaryTextColor" />


            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_shape_background_drawable"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/create_account"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>