<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCardActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginVertical="15dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_selector"
                android:drawableStart="@drawable/username_edit_text_icon_selector"
                android:drawablePadding="12dp"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/surname"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_selector"
                android:drawableStart="@drawable/username_edit_text_icon_selector"
                android:drawablePadding="12dp"
                android:hint="@string/surname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/primaryTextColor" />

            <EditText
                android:id="@+id/street_address"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_selector"
                android:drawableStart="@drawable/username_edit_text_icon_selector"
                android:drawablePadding="12dp"
                android:hint="@string/address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/primaryTextColor" />

            <CheckBox
                android:layout_gravity="center"
                android:id="@+id/checkbox_terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_and_conditions"
                android:textColor="@color/primaryDarkColor"
                app:layout_constraintBottom_toTopOf="@+id/button_create_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_create_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="15dp"
                android:padding="15dp"
                android:text="@string/create"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/primaryDarkColor"/>


        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>