<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SelectThemeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup

        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/darkRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:padding="5dp"
            android:text="@string/dark"
            android:textAlignment="textStart"
            android:onClick="onRadioButtonClicked" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/lightRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:padding="5dp"
            android:text="@string/light"
            android:textAlignment="textStart"
            android:onClick="onRadioButtonClicked" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/follow_systemRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="true"
            android:padding="5dp"
            android:text="@string/follow_system"
            android:textAlignment="textStart"
            android:onClick="onRadioButtonClicked"/>


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>